# custom-assumerole

./: .gitignore  README.md  pyproject.toml
src/aws_session_manager/: __init__.py  session_manager.py
test/: EC2ServiceWithRefresh.py  requirements.txt  test.py
